--- a/forum/public/main.css
+++ b/forum/public/main.css
@@ -21,6 +21,32 @@ span {
     font-size: 1.3rem;
 }
 
+.main-logo{
+  width: 70px;
+  border-radius: 50%;
+}
+.first-bg{
+  text-align: center;
+  font-family: '나눔손글씨', 'gulim', 'gothic';
+  font-size: 40px;
+ 
+}
+.first-title-box{
+  position: absolute;
+  top: 1%;
+  left: 30%;
+  right: 30%;
+}
+.first-button{
+  background: none;
+  border-radius: 16px;
+}
+
+.first-logo{
+  width: 100%;
+  height: 100%;
+}
+
 
 .none-a {
   text-decoration: none;
@@ -181,11 +207,15 @@ div {
 }
 
 .form-white {
+  color: black;
   background: white;
   padding: 30px;
   width: 80%;
   max-width: 900px;
   margin: auto;
+}
+.form-white a{
+  text-decoration: none;
 }
 
 .form-input {
