--- a/forum/views/mypage.ejs
+++ b/forum/views/mypage.ejs
@@ -16,14 +16,14 @@
 
 
             <div class="form-white">
-                <h2>마이페이지</h2>
+                <h2>마이페이지 <a href="/mypageEdit"> ✏️ </a></h2>
 
                 <div class="row"> 
                 <div class="col-md-6">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
-                            <div style="width: 100px; height: 100px; border-radius: 50%; background: black;">
-                                <img src="증명사진.jpg" alt="...">
+                            <div style="width: 100px; height: 100px; border-radius: 50%; background: none">
+                                <img src="https://sanggyeolbucket.s3.ap-northeast-2.amazonaws.com/main_logo.webp" alt="...">
                             </div>
 
                         </div>
